<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:title="@string/nav_home" />

    <item
      android:id="@+id/nav_programs"
      android:title="@string/nav_programs" />

    <item
      android:id="@+id/nav_tracks"
      android:title="@string/nav_tracks" />

    <item
      android:id="@+id/nav_badge"
      android:title="@string/nav_badge" />

    <item
      android:id="@+id/nav_aboutDrave"
      android:title="@string/nav_aboutDrave" />

    <item
      android:id="@+id/nav_aboutScoutCentre"
      android:title="@string/nav_aboutScoutCentre" />

    <item
      android:id="@+id/nav_rules"
      android:title="@string/nav_rules" />

    <item
      android:id="@+id/nav_contacts"
      android:title="@string/nav_contacts" />

  </group>

</menu>
