<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background"
  tools:context=".fragment.AboutDraveFragment">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.AppCompatTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rulesTitle"
      android:textSize="24sp"
      android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rulesHeader1"
      android:textSize="16sp"
      android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rulesText1" />

    <android.support.v7.widget.AppCompatTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rulesHeader2"
      android:textSize="16sp"
      android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rulesText3" />

  </LinearLayout>

</ScrollView>
