<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background"
  tools:context=".fragment.AboutDraveFragment">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.AppCompatTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/contactsTitle"
      android:textSize="24sp"
      android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/contactsText1" />

    <android.support.v7.widget.AppCompatImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:layout_marginTop="10dp"
      android:adjustViewBounds="true"
      android:paddingLeft="150dp"
      android:paddingRight="150dp"
      android:scaleType="fitCenter"
      android:src="@drawable/contacts_1" />

    <android.support.v7.widget.AppCompatTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/contactsText2" />

  </LinearLayout>

</ScrollView>
